--- a/anime_studio/search_anime/static/css/styles.css
+++ b/anime_studio/search_anime/static/css/styles.css
@@ -108,6 +108,36 @@ div#studio.card tbody {
     text-align: center;
 }
 
+button {
+    background: none;
+    border: none;
+    padding: 0;
+    font-size: 25px;
+    font-family: 'Bangers', cursive;
+}
+
+button:hover{
+    color:red;
+    transition: 0.2s;
+}
+
+div#projeto.card {
+    margin: 0; 
+    width: 500px;
+    text-align: center;
+    margin-top: 35px;
+}
+
+div#projeto.card p{
+    text-align: center;
+    padding: 10px;
+}
+
+div#projeto.card h5 {
+    font-weight: bold;
+}
+
+
 /* Footer */
 
 .container-fluid footer{
