--- a/anime_studio/search_anime/templates/search_anime/trigger.html
+++ b/anime_studio/search_anime/templates/search_anime/trigger.html
@@ -4,6 +4,17 @@
 
 {% block content %}
 
-{{nosso_grafo}}
+<div id="logo">
+    <img src="https://i.imgur.com/fCFVlmx.png" id="imagem" style="margin-bottom: -60px;">
+</div>
+
+<div class="card" id="estudio">
+    {{nosso_grafo}}
+</div>
+
+<div id="imagem">
+    <h4>Representação do Grafo de forma esquemática</h4>
+    <img src="https://i.imgur.com/fW0ZjnR.png">
+</div>
 
 {% endblock %}
