--- a/anime_studio/search_anime/templates/search_anime/whitefox.html
+++ b/anime_studio/search_anime/templates/search_anime/whitefox.html
@@ -4,6 +4,17 @@
 
 {% block content %}
 
-{{nosso_grafo}}
+<div id="logo">
+    <img src="https://i.imgur.com/g4mmH5z.png" id="imagem" style="width: 250px;height: 200px;">
+</div>
+
+<div class="card" id="estudio">
+    {{nosso_grafo}}
+</div>
+
+<div id="imagem">
+    <h4>Representação do Grafo de forma esquemática</h4>
+    <img src="https://i.imgur.com/5tqU6Eu.png">
+</div>
 
 {% endblock %}
