--- a/anime_studio/search_anime/templates/search_anime/apic.html
+++ b/anime_studio/search_anime/templates/search_anime/apic.html
@@ -4,6 +4,16 @@
 
 {% block content %}
 
-{{nosso_grafo}}
+<div id="logo">
+    <img src="https://i.imgur.com/Rxz6sJU.jpg" id="imagem" style="height: 300px; width: 300px;margin-top: -20px;margin-bottom: -30px;">
+</div>
 
+<div class="card" id="estudio">
+    {{nosso_grafo}}
+</div>
+
+<div id="imagem">
+    <h4>Representação do Grafo de forma esquemática</h4>
+    <img src="https://i.imgur.com/cAfhQE9.png">
+</div>
 {% endblock %}
