--- a/anime_studio/search_anime/templates/search_anime/bones.html
+++ b/anime_studio/search_anime/templates/search_anime/bones.html
@@ -4,6 +4,21 @@
 
 {% block content %}
 
-{{nosso_grafo}}
+{{ distancia_grafo }}
+
+<div id="logo">
+    <img src="https://i.imgur.com/kqhhVQI.png" id="imagem">
+</div>
+
+<h4 id="card-topic">Output do código</h4>
+
+<div class="card" id="estudio">
+    {{nosso_grafo}}
+</div>
+
+<div id="imagem">
+    <h4>Representação do Grafo de forma esquemática</h4>
+    <img src="https://i.imgur.com/ZMwkgX1.png">
+</div>
 
 {% endblock %}
