--- a/anime_studio/search_anime/templates/search_anime/ig.html
+++ b/anime_studio/search_anime/templates/search_anime/ig.html
@@ -4,6 +4,17 @@
 
 {% block content %}
 
-{{nosso_grafo}}
+<div id="logo">
+    <img src="https://i.imgur.com/tAkL2tP.png" id="imagem" style="width: 400px;height: 150px;">
+</div>
+
+<div class="card" id="estudio">
+    {{nosso_grafo}}
+</div>
+
+<div id="imagem">
+    <h4>Representação do Grafo de forma esquemática</h4>
+    <img src="https://i.imgur.com/kVnY4mp.png">
+</div>
 
 {% endblock %}
