--- a/anime_studio/search_anime/templates/search_anime/kyoto.html
+++ b/anime_studio/search_anime/templates/search_anime/kyoto.html
@@ -4,6 +4,17 @@
 
 {% block content %}
 
-{{nosso_grafo}}
+<div id="logo">
+    <img src="https://i.imgur.com/qfnVwhh.png" id="imagem">
+</div>
+
+<div class="card" id="estudio">
+    {{nosso_grafo}}
+</div>
+
+<div id="imagem">
+    <h4>Representação do Grafo de forma esquemática</h4>
+    <img src="https://i.imgur.com/Jhlj8w5.png">
+</div>
 
 {% endblock %}
