--- a/anime_studio/search_anime/templates/search_anime/paworks.html
+++ b/anime_studio/search_anime/templates/search_anime/paworks.html
@@ -4,6 +4,18 @@
 
 {% block content %}
 
-{{nosso_grafo}}
+<div id="logo">
+    <img src="https://i.imgur.com/xbRzOgG.png" id="imagem" style="width: 200px;height: 200px;">
+</div>
+
+<div class="card" id="estudio">
+    {{nosso_grafo}}
+</div>
+
+<div id="imagem">
+    <h4>Representação do Grafo de forma esquemática</h4>
+    <img src="https://i.imgur.com/Pdr6v9l.png">
+</div>
+
 
 {% endblock %}
