--- a/anime_studio/search_anime/templates/search_anime/pierrot.html
+++ b/anime_studio/search_anime/templates/search_anime/pierrot.html
@@ -4,6 +4,18 @@
 
 {% block content %}
 
-{{nosso_grafo}}
+<div id="logo">
+    <img src="https://i.imgur.com/NXpBNMD.png" id="imagem">
+</div>
+
+<div class="card" id="estudio">
+    {{nosso_grafo}}
+</div>
+
+<div id="imagem">
+    <h4>Representação do Grafo de forma esquemática</h4>
+    <img src="https://i.imgur.com/mjrgg38.png">
+</div>
+
 
 {% endblock %}
