--- a/anime_studio/search_anime/templates/search_anime/voln.html
+++ b/anime_studio/search_anime/templates/search_anime/voln.html
@@ -4,6 +4,17 @@
 
 {% block content %}
 
-{{nosso_grafo}}
+<div id="logo">
+    <img src="https://i.imgur.com/GDlCAJO.png" id="imagem" style="width: 250px;height: 200px;">
+</div>
+
+<div class="card" id="estudio">
+    {{nosso_grafo}}
+</div>
+
+<div id="imagem">
+    <h4>Representação do Grafo de forma esquemática</h4>
+    <img src="https://i.imgur.com/P9sIkUn.png">
+</div>
 
 {% endblock %}
