--- a/anime_studio/search_anime/templates/search_anime/wit.html
+++ b/anime_studio/search_anime/templates/search_anime/wit.html
@@ -4,6 +4,19 @@
 
 {% block content %}
 
-{{nosso_grafo}}
+<div id="logo">
+    <img src="https://i.imgur.com/jNq64y4.jpg" id="imagem">
+</div>
+
+<h4 id="card-topic">Output do código</h4>
+
+<div class="card" id="estudio">
+    {{nosso_grafo}}
+</div>
+
+<div id="imagem">
+    <h4>Representação do Grafo de forma esquemática</h4>
+    <img src="https://i.imgur.com/nP1IuAi.png">
+</div>
 
 {% endblock %}
