--- a/anime_studio/search_anime/templates/search_anime/apic.html
+++ b/anime_studio/search_anime/templates/search_anime/apic.html
@@ -16,4 +16,106 @@
     <h4>Representação do Grafo de forma esquemática</h4>
     <img src="https://i.imgur.com/cAfhQE9.png">
 </div>
+
+<div id="distancia">
+    <table>
+        <h4>Distância dos Grafos</h4>
+        <tr>
+            <th>Nome</th>
+            <th>Distância</th>
+        </tr>
+        <tr>
+            <th>A-1 Pictures</th>
+            <th>0</th>
+        </tr>
+        <tr>
+            <th>Darling in the FranXX</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Sword Art Online</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Shigatsu wa Kimi no Uso</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Ao no Exorcist</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Nanatsu no Taizai</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Boku dake ga Inai Machi</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Fairy Tail</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Ano Hi Mita Hana no Namae wo Bokutachi wa Mada Shiranai</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Kaguya-sama wa Kokurasetai: Tensai-tachi no Renai Zunousen</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Magi: The Labyrinth of Magic</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Gate: Jieitai Kanochi nite, Kaku Tatakaeri</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Hai to Gensou no Grimgar</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Wotaku ni Koi wa Muzukashii</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Gakusen Toshi Asterisk</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Blend S</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Saenai Heroine no Sodatekata</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Aldnoah.Zero</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Ore no Kanojo to Osananajimi ga Shuraba Sugiru</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Ore no Imouto ga Konnani Kawaii Wake ga Nai</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Working!!</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Demi-chan wa Kataritai</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Grancrest Senki</th>
+            <th>1</th>
+        </tr>
+    </table>
+</div>
 {% endblock %}
