--- a/anime_studio/search_anime/templates/search_anime/artland.html
+++ b/anime_studio/search_anime/templates/search_anime/artland.html
@@ -17,4 +17,23 @@
     <img src="https://i.imgur.com/fNLpCJ9.png">
 </div>
 
+<div id="distancia">
+    <table>
+        <h4>Distância dos Grafos</h4>
+        <tr>
+            <th>Nome</th>
+            <th>Distância</th>
+        </tr>
+        <tr>
+            <th>Artland</th>
+            <th>0</th>
+        </tr>
+        <tr>
+            <th>Mushishi</th>
+            <th>1</th>
+        </tr>
+    </table>
+</div>
+
+
 {% endblock %}
