--- a/anime_studio/search_anime/templates/search_anime/clover.html
+++ b/anime_studio/search_anime/templates/search_anime/clover.html
@@ -17,4 +17,42 @@
     <img src="https://i.imgur.com/FmdOZpF.png">
 </div>
 
+<div id="distancia">
+    <table>
+        <h4>Distância dos Grafos</h4>
+        <tr>
+            <th>Nome</th>
+            <th>Distância</th>
+        </tr>
+        <tr>
+            <th>Clover Works</th>
+            <th>0</th>
+        </tr>
+        <tr>
+            <th>Yakusoku no Neverland</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Darling in the FranXX</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Seishun Buta Yarou wa Bunny Girl Senpai no Yume wo Minai</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Horimiya</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Wonder Egg Priority</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Persona 5 the Animation</th>
+            <th>1</th>
+        </tr>
+    </table>
+</div>
+
 {% endblock %}
