--- a/anime_studio/search_anime/templates/search_anime/david.html
+++ b/anime_studio/search_anime/templates/search_anime/david.html
@@ -17,4 +17,42 @@
     <img src="https://i.imgur.com/27ijA05.png">
 </div>
 
+<div id="distancia">
+    <table>
+        <h4>Distância dos Grafos</h4>
+        <tr>
+            <th>Nome</th>
+            <th>Distância</th>
+        </tr>
+        <tr>
+            <th>David Production</th>
+            <th>0</th>
+        </tr>
+        <tr>
+            <th>JoJo no Kimyou na Bouken</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>JoJo no Kimyou na Bouken Part 3: Stardust Crusaders</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>JoJo no Kimyou na Bouken Part 4: Diamond wa Kudakenai</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>JoJo no Kimyou na Bouken Part 5: Ougon no Kaze</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Enen no Shouboutai</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Hataraku Saibou</th>
+            <th>1</th>
+        </tr>
+    </table>
+</div>
+
 {% endblock %}
