--- a/anime_studio/search_anime/templates/search_anime/deen.html
+++ b/anime_studio/search_anime/templates/search_anime/deen.html
@@ -17,4 +17,30 @@
     <img src="https://i.imgur.com/bvBq7Ix.png">
 </div>
 
+<div id="distancia">
+    <table>
+        <h4>Distância dos Grafos</h4>
+        <tr>
+            <th>Nome</th>
+            <th>Distância</th>
+        </tr>
+        <tr>
+            <th>Studio Deen</th>
+            <th>0</th>
+        </tr>
+        <tr>
+            <th>Kono Subarashii Sekai ni Shukufuku wo!</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Sakamoto Desu ga?</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Higurashi no Naku Koro ni</th>
+            <th>1</th>
+        </tr>
+    </table>
+</div>
+
 {% endblock %}
