--- a/anime_studio/search_anime/templates/search_anime/feel.html
+++ b/anime_studio/search_anime/templates/search_anime/feel.html
@@ -17,4 +17,41 @@
     <img src="https://i.imgur.com/EHlzsUj.png">
 </div>
 
+<div id="distancia">
+    <table>
+        <h4>Distância dos Grafos</h4>
+        <tr>
+            <th>Nome</th>
+            <th>Distância</th>
+        </tr>
+        <tr>
+            <th>feel</th>
+            <th>0</th>
+        </tr>
+        <tr>
+            <th>Yahari Ore no Seishun Love Comedy wa Machigatteiru. Zoku</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Tsuki ga Kirei</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Hinamatsuri</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Dagashi Kashi</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Island</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Ushinawareta Mirai wo Motomete</th>
+            <th>1</th>
+        </tr>
+    </table>
+</div>
 {% endblock %}
