--- a/anime_studio/search_anime/templates/search_anime/gainax.html
+++ b/anime_studio/search_anime/templates/search_anime/gainax.html
@@ -17,4 +17,26 @@
     <img src="https://i.imgur.com/DzSkEFu.png">
 </div>
 
+<div id="distancia">
+    <table>
+        <h4>Distância dos Grafos</h4>
+        <tr>
+            <th>Nome</th>
+            <th>Distância</th>
+        </tr>
+        <tr>
+            <th>Gainax</th>
+            <th>0</th>
+        </tr>
+        <tr>
+            <th>Tengen Toppa Gurren Lagann</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Neon Genesis Evangelion</th>
+            <th>1</th>
+        </tr>
+    </table>
+</div>
+
 {% endblock %}
