--- a/anime_studio/search_anime/templates/search_anime/ig.html
+++ b/anime_studio/search_anime/templates/search_anime/ig.html
@@ -17,4 +17,38 @@
     <img src="https://i.imgur.com/kVnY4mp.png">
 </div>
 
+<div id="distancia">
+    <table>
+        <h4>Distância dos Grafos</h4>
+        <tr>
+            <th>Nome</th>
+            <th>Distância</th>
+        </tr>
+        <tr>
+            <th>Production I.G</th>
+            <th>0</th>
+        </tr>
+        <tr>
+            <th>Psycho-Pass</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Haikyuu!!</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Kuroko no Basket</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Guilty Crown</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Yuukoku no Moriarty</th>
+            <th>1</th>
+        </tr>
+    </table>
+</div>
+
 {% endblock %}
