--- a/anime_studio/search_anime/templates/search_anime/jcstaff.html
+++ b/anime_studio/search_anime/templates/search_anime/jcstaff.html
@@ -17,4 +17,70 @@
     <img src="https://i.imgur.com/CtWbQAN.png">
 </div>
 
+<div id="distancia">
+    <table>
+        <h4>Distância dos Grafos</h4>
+        <tr>
+            <th>Nome</th>
+            <th>Distância</th>
+        </tr>
+        <tr>
+            <th>J.C Staff</th>
+            <th>0</th>
+        </tr>
+        <tr>
+            <th>Toradora!</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Shokugeki no Souma</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Dungeon ni Deai wo Motomeru no wa Machigatteiru Darou ka</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Sakura-sou no Pet na Kanojo</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Kaichou wa Maid-sama!</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Prison School</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Golden Time</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Zero no Tsukaima</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Toaru Majutsu no Index</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Saiki Kusuo no Ψ-nan</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Bakuman</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>High Score Girl</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Back Street Girls: Gokudolls</th>
+            <th>1</th>
+        </tr>
+    </table>
+</div>
+
 {% endblock %}
