--- a/anime_studio/search_anime/templates/search_anime/kinema.html
+++ b/anime_studio/search_anime/templates/search_anime/kinema.html
@@ -17,4 +17,34 @@
     <img src="https://i.imgur.com/wEcRdXA.png">
 </div>
 
+<div id="distancia">
+    <table>
+        <h4>Distância dos Grafos</h4>
+        <tr>
+            <th>Nome</th>
+            <th>Distância</th>
+        </tr>
+        <tr>
+            <th>Kinema Citrus</th>
+            <th>0</th>
+        </tr>
+        <tr>
+            <th>Tate no Yuusha no Nariagari</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Made in Abyss</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Black Bullet</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Barakamon</th>
+            <th>1</th>
+        </tr>
+    </table>
+</div>
+
 {% endblock %}
