--- a/anime_studio/search_anime/templates/search_anime/kyoto.html
+++ b/anime_studio/search_anime/templates/search_anime/kyoto.html
@@ -17,4 +17,58 @@
     <img src="https://i.imgur.com/Jhlj8w5.png">
 </div>
 
+<div id="distancia">
+    <table>
+        <h4>Distância dos Grafos</h4>
+        <tr>
+            <th>Nome</th>
+            <th>Distância</th>
+        </tr>
+        <tr>
+            <th>Kyoto Animation</th>
+            <th>0</th>
+        </tr>
+        <tr>
+            <th>Clannad</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Violet Evergarden</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Chuunibyou demo Koi ga Shitai!</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Hyouka</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Kyoukai no Kanata</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>K-On!</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Kobayashi-san Chi no Maid Dragon</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Suzumiya Haruhi no Yuuutsu</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Nichijou</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Amagi Brilliant Park</th>
+            <th>1</th>
+        </tr>
+    </table>
+</div>
+
 {% endblock %}
