--- a/anime_studio/search_anime/templates/search_anime/madhouse.html
+++ b/anime_studio/search_anime/templates/search_anime/madhouse.html
@@ -17,4 +17,86 @@
     <img src="https://i.imgur.com/PzMhW4R.png">
 </div>
 
+<div id="distancia">
+    <table>
+        <h4>Distância dos Grafos</h4>
+        <tr>
+            <th>Nome</th>
+            <th>Distância</th>
+        </tr>
+        <tr>
+            <th>Mad House</th>
+            <th>0</th>
+        </tr>
+        <tr>
+            <th>Death Note</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>One Punch Man</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>No Game No Life</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Hunter x Hunter (2011)</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Kiseijuu: Sei no Kakuritsu</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Death Parade</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Highschool of the Dead</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Overlord</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Mahouka Koukou no Rettousei</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Black Lagoon</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Btooom!</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Hellsing Ultimate</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Monster</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Claymore</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Ore Monogatari!!</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Hajime no Ippo</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Paprika</th>
+            <th>1</th>
+        </tr>
+    </table>
+</div>
+
 {% endblock %}
