--- a/anime_studio/search_anime/templates/search_anime/mappa.html
+++ b/anime_studio/search_anime/templates/search_anime/mappa.html
@@ -17,4 +17,54 @@
     <img src="https://i.imgur.com/OeAWYxF.png">
 </div>
 
+<div id="distancia">
+    <table>
+        <h4>Distância dos Grafos</h4>
+        <tr>
+            <th>Nome</th>
+            <th>Distância</th>
+        </tr>
+        <tr>
+            <th>Mappa</th>
+            <th>0</th>
+        </tr>
+        <tr>
+            <th>Shingeki no Kyojin(4)</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Kakegurui</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Zankyou no Terror</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Dororo</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Jujutsu Kaisen</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>The God of High School</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Inuyashiki</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Dorohedoro</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Ushio to Tora</th>
+            <th>1</th>
+        </tr>
+    </table>
+</div>
+
 {% endblock %}
