--- a/anime_studio/search_anime/templates/search_anime/paworks.html
+++ b/anime_studio/search_anime/templates/search_anime/paworks.html
@@ -17,5 +17,43 @@
     <img src="https://i.imgur.com/Pdr6v9l.png">
 </div>
 
+<div id="distancia">
+    <table>
+        <h4>Distância dos Grafos</h4>
+        <tr>
+            <th>Nome</th>
+            <th>Distância</th>
+        </tr>
+        <tr>
+            <th>P.A Works</th>
+            <th>0</th>
+        </tr>
+        <tr>
+            <th>Angel Beats!</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Another</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Charlotte:</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Nagi no Asu kara</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Hanasaku Iroha</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Kamisama ni Natta Hi</th>
+            <th>1</th>
+        </tr>
+    </table>
+</div>
+
 
 {% endblock %}
