--- a/anime_studio/search_anime/templates/search_anime/pierrot.html
+++ b/anime_studio/search_anime/templates/search_anime/pierrot.html
@@ -17,5 +17,50 @@
     <img src="https://i.imgur.com/mjrgg38.png">
 </div>
 
+<div id="distancia">
+    <table>
+        <h4>Distância dos Grafos</h4>
+        <tr>
+            <th>Nome</th>
+            <th>Distância</th>
+        </tr>
+        <tr>
+            <th>Studio Pierrot</th>
+            <th>0</th>
+        </tr>
+        <tr>
+            <th>Tokyo Ghoul</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Naruto</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Naruto: Shippuden</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Bleach</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Black Clover</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Yuu☆Yuu☆Hakusho</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Akudama Drive</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Great Teacher Onizuka</th>
+            <th>1</th>
+        </tr>
+    </table>
+</div>
 
 {% endblock %}
