--- a/anime_studio/search_anime/templates/search_anime/projeto.html
+++ b/anime_studio/search_anime/templates/search_anime/projeto.html
@@ -52,6 +52,128 @@
       </tbody>
     </table>
   </form>
+
+  <div id="imagem">
+    <h4>Representação do Grafo Geral de forma esquemática</h4>
+    <img src="https://i.imgur.com/XdVq2GN.png">
+  </div>
 </div>
+
+<!-- <div class="card" id="studio">
+  <form action="{% url 'projeto' %}" method="post"> {% csrf_token %}
+    <table class="table">
+      <thead>
+        <h6>Estúdios</h6>
+      </thead>
+      <tbody>
+        <tr>
+          <td>
+            <h5>Bones</h5>
+            <ul>
+            </ul>
+          </td>
+          <td>
+            <h5>Wit Studio</h5>
+            <ul>
+            </ul>
+          </td>
+          <td>
+            <h5>Mappa</h5>
+            <ul></ul>
+          </td>
+          <td>
+            <h5>Mad House</h5>
+            <ul></ul>
+          </td>
+          <td>
+            <h5>A-1 Pictures</h5>
+            <ul></ul>
+          </td>
+          <td>
+            <h5>Ufotable</h5>
+            <ul></ul>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <h5>J.C Staff</h5>
+            <ul></ul>
+          </td>
+          <td>
+            <h5>P.A Works</h5>
+            <ul></ul>
+          </td>
+          <td>
+            <h5>Trigger</h5>
+            <ul></ul>
+          </td>
+          <td>
+            <h5>Kyoto Animation</h5>
+            <ul></ul>
+          </td>
+          <td>
+            <h5>Studio Pierrot</h5>
+            <ul></ul>
+          </td>
+          <td>
+            <h5>White Fox</h5>
+            <ul></ul>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <h5>Clover Works</h5>
+            <ul></ul>
+          </td>
+          <td>
+            <h5>Toei Animation</h5>
+            <ul></ul>
+          </td>
+          <td>
+            <h5>Artland</h5>
+            <ul></ul>
+          </td>
+          <td>
+            <h5>Kinema Citrus</h5>
+            <ul></ul>
+          </td>
+          <td>
+            <h5>David Production</h5>
+            <ul></ul>
+          </td>
+          <td>
+            <h5>Studio VOLN</h5>
+            <ul></ul>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <h5>Production I.G</h5>
+            <ul></ul>
+          </td>
+          <td>
+            <h5>Gainax</h5>
+            <ul></ul>
+          </td>
+          <td>
+            <h5>TMS Entertainment</h5>
+            <ul></ul>
+          </td>
+          <td>
+            <h5>feel</h5>
+            <ul></ul>
+          </td>
+          <td>
+            <h5>Studio Deen</h5>
+            <ul></ul>
+          </td>
+          <td>
+            <h5>Sunrise</h5>
+            <ul></ul>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </form> -->
 
 {% endblock %}
