--- a/anime_studio/search_anime/templates/search_anime/sunrise.html
+++ b/anime_studio/search_anime/templates/search_anime/sunrise.html
@@ -17,4 +17,41 @@
     <img src="https://i.imgur.com/sn5XAhs.png">
 </div>
 
+<div id="distancia">
+    <table>
+        <h4>Distância dos Grafos</h4>
+        <tr>
+            <th>Nome</th>
+            <th>Distância</th>
+        </tr>
+        <tr>
+            <th>Sunrise</th>
+            <th>0</th>
+        </tr>
+        <tr>
+            <th>Code Geass</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Cowboy Bebop</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Gintama</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Accel World</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Danshi Koukousei no Nichijou</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Cross Ange: Tenshi to Ryuu no Rondo</th>
+            <th>1</th>
+        </tr>
+    </table>
+</div>
 {% endblock %}
