--- a/anime_studio/search_anime/templates/search_anime/tms.html
+++ b/anime_studio/search_anime/templates/search_anime/tms.html
@@ -17,4 +17,58 @@
     <img src="https://i.imgur.com/vRcbbSU.png">
 </div>
 
+<div id="distancia">
+    <table>
+        <h4>Distância dos Grafos</h4>
+        <tr>
+            <th>Nome</th>
+            <th>Distância</th>
+        </tr>
+        <tr>
+            <th>TMS Entertainment</th>
+            <th>0</th>
+        </tr>
+        <tr>
+            <th>Dr. Stone</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>ReLIFE</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>D.Gray-man</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Kanojo, Okarishimasu</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Fruits Basket</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Baki</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Zetman</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Saint Seiya: The Lost Canvas - Meiou Shinwa</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Bakugan</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Tottoko Hamtarou</th>
+            <th>1</th>
+        </tr>
+    </table>
+</div>
+
 {% endblock %}
