--- a/anime_studio/search_anime/templates/search_anime/toei.html
+++ b/anime_studio/search_anime/templates/search_anime/toei.html
@@ -17,4 +17,34 @@
     <img src="https://i.imgur.com/CayF5ZJ.png">
 </div>
 
+<div id="distancia">
+    <table>
+        <h4>Distância dos Grafos</h4>
+        <tr>
+            <th>Nome</th>
+            <th>Distância</th>
+        </tr>
+        <tr>
+            <th>Toei Animation</th>
+            <th>0</th>
+        </tr>
+        <tr>
+            <th>One Piece</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>DragonBall Z</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Digimon</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Yu☆Gi☆Oh!</th>
+            <th>1</th>
+        </tr>
+    </table>
+</div>
+
 {% endblock %}
