--- a/anime_studio/search_anime/templates/search_anime/trigger.html
+++ b/anime_studio/search_anime/templates/search_anime/trigger.html
@@ -17,4 +17,42 @@
     <img src="https://i.imgur.com/fW0ZjnR.png">
 </div>
 
+<div id="distancia">
+    <table>
+        <h4>Distância dos Grafos</h4>
+        <tr>
+            <th>Nome</th>
+            <th>Distância</th>
+        </tr>
+        <tr>
+            <th>Trigger</th>
+            <th>0</th>
+        </tr>
+        <tr>
+            <th>Kill la Kill</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Darling in the FranXX</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Kiznaiver</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Little Witch Academia</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>SSSS.Gridman</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>BNA: Brand New Animal</th>
+            <th>1</th>
+        </tr>
+    </table>
+</div>
+
 {% endblock %}
