--- a/anime_studio/search_anime/templates/search_anime/ufotable.html
+++ b/anime_studio/search_anime/templates/search_anime/ufotable.html
@@ -17,4 +17,30 @@
     <img src="https://i.imgur.com/FjObOcI.png">
 </div>
 
+<div id="distancia">
+    <table>
+        <h4>Distância dos Grafos</h4>
+        <tr>
+            <th>Nome</th>
+            <th>Distância</th>
+        </tr>
+        <tr>
+            <th>Ufotable</th>
+            <th>0</th>
+        </tr>
+        <tr>
+            <th>Kimetsu no Yaiba</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Fate/Zero</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>God Eater</th>
+            <th>1</th>
+        </tr>
+    </table>
+</div>
+
 {% endblock %}
