--- a/anime_studio/search_anime/templates/search_anime/voln.html
+++ b/anime_studio/search_anime/templates/search_anime/voln.html
@@ -17,4 +17,26 @@
     <img src="https://i.imgur.com/P9sIkUn.png">
 </div>
 
+<div id="distancia">
+    <table>
+        <h4>Distância dos Grafos</h4>
+        <tr>
+            <th>Nome</th>
+            <th>Distância</th>
+        </tr>
+        <tr>
+            <th>Studio VOLN</th>
+            <th>0</th>
+        </tr>
+        <tr>
+            <th>Ushio to Tora</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Karakuri Circus</th>
+            <th>1</th>
+        </tr>
+    </table>
+</div>
+
 {% endblock %}
