--- a/anime_studio/search_anime/templates/search_anime/bones.html
+++ b/anime_studio/search_anime/templates/search_anime/bones.html
@@ -4,8 +4,6 @@
 
 {% block content %}
 
-{{ distancia_grafo }}
-
 <div id="logo">
     <img src="https://i.imgur.com/kqhhVQI.png" id="imagem">
 </div>
@@ -19,6 +17,56 @@
 <div id="imagem">
     <h4>Representação do Grafo de forma esquemática</h4>
     <img src="https://i.imgur.com/ZMwkgX1.png">
+</div>
+
+<div id="distancia">
+    <table>
+        <h4>Distância dos Grafos</h4>
+        <tr>
+            <th>Nome</th>
+            <th>Distância</th>
+        </tr>
+        <tr>
+            <th>Bones</th>
+            <th>0</th>
+        </tr>
+        <tr>
+            <th>Fullmetal Alchemist: Brotherhood</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Boku no Hero Academia</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Noragami</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Mob Psycho 100</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Soul Eater</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Bungou Stray Dogs</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Darker than Black</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Kekkai Sensen</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Carole & Tuesday</th>
+            <th>1</th>
+        </tr>
+    </table>
 </div>
 
 {% endblock %}
