--- a/anime_studio/search_anime/templates/search_anime/whitefox.html
+++ b/anime_studio/search_anime/templates/search_anime/whitefox.html
@@ -17,4 +17,45 @@
     <img src="https://i.imgur.com/5tqU6Eu.png">
 </div>
 
+<div id="distancia">
+    <table>
+        <h4>Distância dos Grafos</h4>
+        <tr>
+            <th>Nome</th>
+            <th>Distância</th>
+        </tr>
+        <tr>
+            <th>White Fox</th>
+            <th>0</th>
+        </tr>
+        <tr>
+            <th>Steins;Gate</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Re:Zero kara Hajimeru Isekai Seikatsu</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Akame ga Kill!</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Hataraku Maou-sama!</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Goblin Slayer</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Shinchou Yuusha: Kono Yuusha ga Ore Tueee Kuse ni Shinchou Sugiru</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Arifureta Shokugyou de Sekai Saikyou</th>
+            <th>1</th>
+        </tr>
+    </table>
+</div>
 {% endblock %}
