--- a/anime_studio/search_anime/templates/search_anime/wit.html
+++ b/anime_studio/search_anime/templates/search_anime/wit.html
@@ -19,4 +19,46 @@
     <img src="https://i.imgur.com/nP1IuAi.png">
 </div>
 
+<div id="distancia">
+    <table>
+        <h4>Distância dos Grafos</h4>
+        <tr>
+            <th>Nome</th>
+            <th>Distância</th>
+        </tr>
+        <tr>
+            <th>Wit Studio</th>
+            <th>0</th>
+        </tr>
+        <tr>
+            <th>Shingeki no Kyojin(1 - 3)</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Owari no Seraph</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Vinland Saga</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Koutetsujou no Kabaneri</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Mahoutsukai no Yome</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Great Pretender</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>Koi wa Ameagari no You ni</th>
+            <th>1</th>
+        </tr>
+    </table>
+</div>
+
 {% endblock %}
